--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "browserify": "^14.0.0",
+    "browserify-css": "^0.10.0",
     "gulp": "^3.9.1",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^2.4.0",
@@ -17,5 +18,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
